--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <button onclick="searchFood()" id="button-search" class="btn bg-success text-white btn-outline-secondary" type="button">Button</button>
 </div>
 
+<!-- Single Meal Details -->
+<div id="meal-details" class="w-50 mx-auto">
+    
+</div>
+
 <!-- Meal Search Result -->
 <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4">
     <!-- <div class="col">
@@ -34,10 +39,14 @@
     </div> -->
 </div>
 
+<h1 id="error-Msg" class="text-center text-danger mt-5"></h1>
+
+
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
 <!-- Local JS -->
 <script src="main.js"></script>
+<!-- <script src="async.js"></script> -->
 </body>
 </html>
